# classroom-downloader

./: .env.example  .gitignore  AI_SETUP_GUIDE.md  GOOGLE_SETUP.md  OAUTH_FIX.md  QUICK_FIX.md  README.md  app.py  classroom_materials.db  credentials.example.json  credentials_setup_instructions.txt  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  auth.py  classroom_api.py  database.py  downloader.py  file_manager.py  index_generator.py  llm_analyzer.py  subject_classifier.py
static/css/: home.css  study.css  style.css
static/js/: app.js  chat-assistant.js  epub-reader-old.js  epub-reader.js  home.js  notes-manager.js  pdf-viewer.js  study.js
templates/: downloader.html  home.html  index.html  study.html
