[project]
name = "classroom-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle==1.0.2",
    "chardet==5.2.0",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "google-api-python-client==2.102.0",
    "google-auth==2.23.3",
    "google-auth-httplib2==0.1.1",
    "google-auth-oauthlib==1.1.0",
    "python-dateutil==2.8.2",
    "python-magic==0.4.27",
    "requests==2.31.0",
    "werkzeug==2.3.7",
]
